--- a/index.css
+++ b/index.css
@@ -238,7 +238,7 @@ img {
 @media screen and (max-width: 360px) {
   .container {
     align-items: flex-start;
-    height: 90vh;
+    height: 1000px;
   }
 
   .hero {
@@ -362,7 +362,7 @@ img {
 @media screen and (max-width: 600px) {
   .container {
     align-items: flex-start;
-    height: 100vh;
+    height: 1000px;
   }
 
   .hero {
